Wprowadzona polska treść wstępna

--- a/index.html
+++ b/index.html
@@ -1,31 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Growth - Startup Landing Page</title>
+  <title>OPTIKOL EUROPA - Teletechnika podziemnaLanding Page</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header class="container header">
-    <div class="logo">Growth<span class="dot">.</span></div>
+    <div class="logo">OPTIKOL<span class="dot">.</span></div>
     <nav class="nav">
-      <a href="#">Features</a>
-      <a href="#">About us</a>
-      <a href="#">Blog</a>
-      <button class="login">Log in</button>
+      <a href="#">Oferta</a>
+      <a href="#">O firmie</a>
+      <!-- <button class="login">Log in</button> -->
     </nav>
   </header>
 
   <section class="hero container">
     <div class="hero-text">
-      <h1>A powerful solution to grow your startup. Fast!</h1>
-      <p>Organize, collaborate, and track progress seamlessly with our one-stop startup growth tool.</p>
+      <h1>Dostarczymy Twoje media. Szybko i bez wykopów!</h1>
+      <p>Planujemy plan robót i profesjonalnie realizujemy zlecenia w Europie.</p>
       <div class="buttons">
-        <button class="primary">Get started</button>
-        <button class="secondary">Book a demo</button>
+        <button class="primary">Złóż zamówienie</button>
+        <button class="secondary">Zadaj pytanie</button>
       </div>
     </div>
     <div class="hero-images">
@@ -35,81 +34,82 @@
 
   <section class="video-section">
     <div class="container">
-      <h2>See how it works and get started in less than 2 minutes</h2>
+      <h2>Zobacz niektore z naszych realizacji</h2>
       <div class="video-placeholder">
         <!-- Placeholder for embedded video or preview -->
       </div>
-      <button class="primary">Get started</button>
+      <button class="primary">Złóż zamówienie</button>
     </div>
   </section>
 
   <section class="testimonials">
     <div class="container">
-      <h2>Don't just take our word for it, see the success stories from businesses just like yours.</h2>
+      <h2>Nie musisz wierzyć nam na słowo. Zobacz opinie o nas.</h2>
       <div class="testimonial-cards">
-        <div class="card">“Our business has seen a significant increase in productivity since we started using the Growth app.” – Katherine Smith</div>
-        <div class="card">“As a small business owner... this app is a game-changer for me.” – Jonathan Lee</div>
-        <div class="card">“The dashboards and reporting features... it's a game changer.” – Daniel Wilson</div>
+        <div class="card">“Optikol zajebiaszczo nam pomógł w modyfikacji planu robót gdy napotkaliśmy problemy z ukrytą infrastrukturą” – Marian Przaśny</div>
+        <div class="card">“Nieduża firma z ogromnym doświadczeniem.” – Stefan Karwowski</div>
+        <div class="card">“Powierzone zadania Optikol wykonał przed terminem co pozwoliło nam na oszczędności i komfortowe zamknięcie całego projektu ” – Pan Maliniak</div>
       </div>
     </div>
   </section>
 
   <section class="pricing container">
-    <h2>Pricing</h2>
-    <p>Start free and scale while you grow. No hidden fees, unlimited users for free.</p>
+    <h2>Cennik</h2>
+    <p>Ceny zależą od przekroju zamawianego duktu. Stosujemy indywidualne podejście do Klienta, dlatego ostateczną ofertę możemy przedstawić po zapoznaniu się ze specyfikacją Państwa projektu.</p>
     <div class="pricing-cards">
       <div class="card">
-        <h3>Simple</h3>
-        <p class="price">Free</p>
+        <h3>Przewiert sterowany standard</h3>
+        <p class="price">Standard</p>
         <ul>
-          <li>Basic issue monitoring</li>
-          <li>Task history (3 months)</li>
-          <li>Schedule appointments</li>
+          <li>Zabezpiecznie BHP na wejsciu i wyjsciu duktu</li>
+          <li>Dokumentacja</li>
+          <li>1 wizyta rozpoznawcza w terenie przed zawarciem kontraktu</li>
         </ul>
-        <button class="primary">Get started</button>
+        <button class="primary">Złóż zamówienie</button>
       </div>
       <div class="card premium">
-        <h3>Premium</h3>
-        <p class="price">$49/month</p>
+        <h3>Przewiert sterowany Premium</h3>
+        <p class="price">Standard plus 40%</p>
         <ul>
-          <li>Everything from the free plan</li>
-          <li>Private internal dashboards</li>
-          <li>Slack integration</li>
-          <li>Extended app access controls</li>
+          <li>Wszystko z planu Standard</li>
+          <li>Komunikacja z przydzielonym koordynatorem</li>
+          <li>Przywrócenie nawierzchni na obu końcach duktu</li>
+          <li>Konsultacje w terenie</li>
         </ul>
-        <button class="primary">Get started</button>
+        <button class="primary">Złóż zamówienie</button>
       </div>
     </div>
   </section>
 
   <section class="faq container">
-    <h2>Frequently asked questions</h2>
+    <h2>Najczęstsze pytania</h2>
     <details>
-      <summary>How does the contract management feature help me keep track of clients and partners?</summary>
-      <p>Helps track client records, gain valuable insights, and streamline partnerships.</p>
+      <summary>Jaka jest minimalna długość zamawianego przerwiertu?</summary>
+      <p>Prace rozpoczynamy od przewiertów o łącznej długości minimum 500m.</p>
     </details>
     <details>
-      <summary>Can I customize the dashboards?</summary>
-      <p>Yes! Tailor dashboards to show what matters most.</p>
+      <summary>Jaka jest maksymalna średnica przewiertu?</summary>
+      <p>Oferujemy przewierty sterowane w zakresie od 50mm do 750mm.</p>
     </details>
     <details>
-      <summary>Can I collaborate with my team?</summary>
-      <p>Absolutely, team features are built in!</p>
+      <summary>Czy można zamówić przewiert na terenie podmokłym? </summary>
+      <p>Jak najbardziej - operujemy na terenach bagiennych oraz pod ciekami wodnymi. Przeszkodą są dopiero zbiorniki wodne o przekroju >50m</p>
     </details>
   </section>
 
+  <!------------------------------------ End of the Content---------------------------------->
+
+
+
+  <!------------------------------------ Start of the Footer -------------------------------->
   <footer class="footer container">
-    <div class="newsletter">
-      <p>Subscribe to newsletter</p>
-      <input type="email" placeholder="Enter your email">
-      <button class="primary">Subscribe</button>
-    </div>
+    
     <div class="footer-columns">
       <div>
-        <h4>Company</h4>
-        <a href="#">About</a>
-        <a href="#">Our team</a>
-        <a href="#">Join us</a>
+        <h4>Optikol</h4>
+        <a href="#">O firmie</a>
+        <a href="#">Drużyna Pierscienia</a>
+        <a href="#">Nawiąż wsółpracę</a>
       </div>
       <div>
         <h4>Resources</h4>
@@ -117,11 +117,13 @@
         <a href="#">Recent Projects</a>
       </div>
       <div>
-        <h4>Contact</h4>
-        <a href="mailto:hello@growthapp.com">hello@growthapp.com</a>
+        <h4>Kontact</h4>
+        <a href="mailto:zapytajoprzewiert@gmail.com">zapytajoprzewiert@gmail.com</a>
       </div>
     </div>
-    <p class="copyright">© 2024 Growth. All rights reserved.</p>
+    <p class="copyright">© &copy; 2025 Growth. Wszelkie prawa zastrzeżone.</p>
   </footer>
+  <!------------------------------------ End of the Footer----------------------------------->
+
 </body>
 </html>
