--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>OPTIKOL EUROPA - Teletechnika podziemnaLanding Page</title>
+  <title>OPTIKOL EUROPA - Teletechnika podziemna Landing Page</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
@@ -46,9 +46,9 @@
     <div class="container">
       <h2>Nie musisz wierzyć nam na słowo. Zobacz opinie o nas.</h2>
       <div class="testimonial-cards">
-        <div class="card">“Optikol zajebiaszczo nam pomógł w modyfikacji planu robót gdy napotkaliśmy problemy z ukrytą infrastrukturą” – Marian Przaśny</div>
-        <div class="card">“Nieduża firma z ogromnym doświadczeniem.” – Stefan Karwowski</div>
-        <div class="card">“Powierzone zadania Optikol wykonał przed terminem co pozwoliło nam na oszczędności i komfortowe zamknięcie całego projektu ” – Pan Maliniak</div>
+        <div class="card">“Optikol znacząco nam pomógł w modyfikacji planu robót gdy napotkaliśmy problemy z ukrytą infrastrukturą”<br> – Marian Przaśny, ISRAELI TELECOM</div>
+        <div class="card">“Nieduża firma z ogromnym doświadczeniem.”<br> – Stefan Karwowski, BUDOPOL-STALIMPEX</div>
+        <div class="card">“Powierzone zadania Optikol wykonał przed terminem co pozwoliło nam na oszczędności i komfortowe zamknięcie całego projektu”<br> – Pan Maliniak, GDDKiA</div>
       </div>
     </div>
   </section>
@@ -64,12 +64,13 @@
           <li>Zabezpiecznie BHP na wejsciu i wyjsciu duktu</li>
           <li>Dokumentacja</li>
           <li>1 wizyta rozpoznawcza w terenie przed zawarciem kontraktu</li>
+          <li>Prace na terytorium Polski</li>
         </ul>
         <button class="primary">Złóż zamówienie</button>
       </div>
       <div class="card premium">
         <h3>Przewiert sterowany Premium</h3>
-        <p class="price">Standard plus 40%</p>
+        <p class="price">Standard plus 30%</p>
         <ul>
           <li>Wszystko z planu Standard</li>
           <li>Komunikacja z przydzielonym koordynatorem</li>
@@ -86,6 +87,10 @@
     <details>
       <summary>Jaka jest minimalna długość zamawianego przerwiertu?</summary>
       <p>Prace rozpoczynamy od przewiertów o łącznej długości minimum 500m.</p>
+    </details>
+    <details>
+      <summary>Czy możliwe są przewierty poza terytorium Polski?</summary>
+      <p>Oczywiście, należy pamiętać, że zagraniczne zlecenia podlegają indywidualnej wycenie.</p>
     </details>
     <details>
       <summary>Jaka jest maksymalna średnica przewiertu?</summary>
@@ -108,20 +113,20 @@
       <div>
         <h4>Optikol</h4>
         <a href="#">O firmie</a>
-        <a href="#">Drużyna Pierscienia</a>
         <a href="#">Nawiąż wsółpracę</a>
+        <a href="https://www.gov.pl/web/klimat">MKiŚ</a>
       </div>
-      <div>
+      <!-- <div>
         <h4>Resources</h4>
         <a href="#">Blog</a>
         <a href="#">Recent Projects</a>
-      </div>
+      </div> -->
       <div>
-        <h4>Kontact</h4>
+        <h4>Kontakt</h4>
         <a href="mailto:zapytajoprzewiert@gmail.com">zapytajoprzewiert@gmail.com</a>
       </div>
     </div>
-    <p class="copyright">© &copy; 2025 Growth. Wszelkie prawa zastrzeżone.</p>
+    <p class="copyright">&copy; 2025 Optikol. Wszelkie prawa zastrzeżone.</p>
   </footer>
   <!------------------------------------ End of the Footer----------------------------------->
 
