--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
-<body>
+<section>
   <header class="container header">
     <div class="logo">OPTIKOL<span class="dot">.</span></div>
     <nav class="nav">
@@ -46,16 +46,19 @@
     <div class="container">
       <h2>Nie musisz wierzyć nam na słowo. Zobacz opinie o nas.</h2>
       <div class="testimonial-cards">
-        <div class="card">“Optikol znacząco nam pomógł w modyfikacji planu robót gdy napotkaliśmy problemy z ukrytą infrastrukturą”<br> – Marian Przaśny, ISRAELI TELECOM</div>
-        <div class="card">“Nieduża firma z ogromnym doświadczeniem.”<br> – Stefan Karwowski, BUDOPOL-STALIMPEX</div>
-        <div class="card">“Powierzone zadania Optikol wykonał przed terminem co pozwoliło nam na oszczędności i komfortowe zamknięcie całego projektu”<br> – Pan Maliniak, GDDKiA</div>
+        <div class="card">“Optikol znacząco nam pomógł w modyfikacji planu robót gdy napotkaliśmy problemy z ukrytą infrastrukturą”<br>
+          <br> – Marian Przaśny, ISRAELI TELECOM</div>
+        <div class="card">“Nieduża firma z ogromnym doświadczeniem.”<br>
+          <br> – Stefan Karwowski, BUDOPOL-STALIMPEX</div>
+        <div class="card">“Powierzone zadania Optikol wykonał przed terminem co pozwoliło nam na oszczędności i komfortowe zamknięcie całego projektu”<br>
+          <br> – Pan Maliniak, GDDKiA</div>
       </div>
     </div>
   </section>
 
   <section class="pricing container">
     <h2>Cennik</h2>
-    <p>Ceny zależą od przekroju zamawianego duktu. Stosujemy indywidualne podejście do Klienta, dlatego ostateczną ofertę możemy przedstawić po zapoznaniu się ze specyfikacją Państwa projektu.</p>
+    <p>Ceny zależą od przekroju zamawianego duktu. Ostateczną ofertę możemy przedstawić po zapoznaniu się ze specyfikacją Państwa projektu.</p>
     <div class="pricing-cards">
       <div class="card">
         <h3>Przewiert sterowany standard</h3>
@@ -85,7 +88,7 @@
   <section class="faq container">
     <h2>Najczęstsze pytania</h2>
     <details>
-      <summary>Jaka jest minimalna długość zamawianego przerwiertu?</summary>
+      <summary>Jaka jest minimalna długość zamawianego przewiertu?</summary>
       <p>Prace rozpoczynamy od przewiertów o łącznej długości minimum 500m.</p>
     </details>
     <details>
@@ -107,27 +110,30 @@
 
 
   <!------------------------------------ Start of the Footer -------------------------------->
-  <footer class="footer container">
-    
-    <div class="footer-columns">
-      <div>
-        <h4>Optikol</h4>
-        <a href="#">O firmie</a>
-        <a href="#">Nawiąż wsółpracę</a>
-        <a href="https://www.gov.pl/web/klimat">MKiŚ</a>
+  <section class="video-section">
+    <footer class="footer container">
+      
+      <div class="footer-columns">
+        <div>
+          <h4>Optikol</h4>
+          <a href="#">O firmie</a>
+          <a href="#">Oferta</a>
+          <a href="https://www.gov.pl/web/klimat" target="_blank">MKiŚ</a>
+        </div>
+        <!-- <div>
+          <h4>Resources</h4>
+          <a href="#">Blog</a>
+          <a href="#">Recent Projects</a>
+        </div> -->
+        <div>
+          <h4>Kontakt</h4>
+          <a href="mailto:zapytajoprzewiert@gmail.com">Wyślij zapytanie</a>
+          <a href="mailto:wspolpraca@gmail.com">Nawiąż wsółpracę</a>
+        </div>
       </div>
-      <!-- <div>
-        <h4>Resources</h4>
-        <a href="#">Blog</a>
-        <a href="#">Recent Projects</a>
-      </div> -->
-      <div>
-        <h4>Kontakt</h4>
-        <a href="mailto:zapytajoprzewiert@gmail.com">zapytajoprzewiert@gmail.com</a>
-      </div>
-    </div>
-    <p class="copyright">&copy; 2025 Optikol. Wszelkie prawa zastrzeżone.</p>
-  </footer>
+      <p class="copyright">&copy; 2025 Optikol. Wszelkie prawa zastrzeżone.</p>
+    </footer>
+  </section>
   <!------------------------------------ End of the Footer----------------------------------->
 
 </body>
