poprawki guziki - hover, zaokraglenie, efekt wcisniecia i pozostawienie bialego tekstu

--- a/index.html
+++ b/index.html
@@ -17,18 +17,19 @@
   <header id="top" class="container header">
     <div class="logo">OPTIKOL<span class="dot">.</span></div>
     <nav class="nav">
-      <a href="#">Oferta</a>
-      <a href="#">O firmie</a>
+      <a href="mailto:zapytajoprzewiert@gmail.com">Zamów</a>
+      <a href="#Oferta">Oferta</a>
+      <a href="#Ofirmie">O firmie</a>
       <!-- <button class="login">Log in</button> -->
     </nav>
   </header>
 
   <section class="hero container">
-    <div class="hero-text">
+    <div class="hero-text hero-content">
       <h1>Dostarczymy Twoje media. Szybko i bez wykopów!</h1>
       <p>Planujemy plan robót i profesjonalnie realizujemy zlecenia w Europie.</p>
       <div class="buttons">
-        <button class="primary">Złóż zamówienie</button>
+        <button class="primary">Zamów</button>
         <button class="secondary">Zadaj pytanie</button>
       </div>
     </div>
@@ -57,7 +58,8 @@
         
       </div> -->
 
-      <button class="primary">Złóż zamówienie</button>
+      <button class="primary">Zamów</button>
+
     </div>
   </section>
 
@@ -93,7 +95,7 @@
           <li>1 wizyta rozpoznawcza w terenie przed zawarciem kontraktu</li>
           <li>Prace na terytorium Polski</li>
         </ul>
-        <button class="primary">Złóż zamówienie</button>
+        <button class="primary">Zamów</button>
       </div>
       <div class="card premium">
         <h3>Przewiert sterowany Premium</h3>
@@ -104,7 +106,7 @@
           <li>Przywrócenie nawierzchni na obu końcach duktu</li>
           <li>Konsultacje w terenie</li>
         </ul>
-        <button class="primary">Złóż zamówienie</button>
+        <button class="primary">Zamów</button>
       </div>
     </div>
   </section>
@@ -158,7 +160,7 @@
           <h4>Kontakt</h4>
           <p>Na maile odpowiadamy w ciągu 24 godzin</p>
           <a href="mailto:zapytajoprzewiert@gmail.com">Wyślij zapytanie</a>
-          <a href="mailto:wspolpraca@gmail.com">Nawiąż wsółpracę</a>
+          <a href="mailto:wspolpraca@gmail.com">Nawiąż współpracę</a>
         </div>
       </div>
       <p class="copyright">&copy; 2025 Optikol. Wszelkie prawa zastrzeżone.</p>
