tymczaowo wstawione odswiezanie strony co 10s

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       scroll-behavior: smooth;
     }
   </style>
+  <meta http-equiv="refresh" content="10">  <!-- TYMCZASOWO odswiezanie co 10s -->
 </head>
 <section>
   <header id="top" class="container header">
@@ -27,7 +28,7 @@
   <section  class="hero">
     <div class="hero-text hero-content">
       <h1>Dostarczymy Twoje media. Szybko i bez wykopów!</h1>
-      <p>Planujemy plan robót i profesjonalnie realizujemy zlecenia w Europie.</p>
+      <p>Przygotujemy plan robót i profesjonalnie zrealizujemy zlecenia w Polsce i Europie.</p>
       <div class="buttons">
 
         <!-- Guzik ZAMÓW -->
