--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <section  class="hero">
     <div class="hero-text hero-content">
-      <h1>Dostarczymy Twoje media. Szybko i bez wykopów!</h1>
+      <h1>Dostarczymy Twoje mediaAAAAAAAA. Szybko i bez wykopów!</h1>
       <p>Przygotujemy plan robót i profesjonalnie zrealizujemy zlecenia w Polsce i Europie.</p>
       <div class="buttons">
 
