--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       scroll-behavior: smooth;
     }
   </style>
-  <meta http-equiv="refresh" content="10">  <!-- TYMCZASOWO odswiezanie co 10s -->
+  <link rel="icon" href="favSlonce.png" type="image/png">
 </head>
 <section>
   <header id="top" class="container header">
