rozwinieto README i wstawiono weń badge statusu projektu

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="pl">
-<head>
+<head>  <!-- ================== HEAD ================== -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>OPTIKOL EUROPA - Teletechnika podziemna Landing Page</title>
@@ -13,7 +13,7 @@
     }
   </style>
   <link rel="icon" href="favSlonce.png" type="image/png">
-</head>
+</head> <!-- ================== END OF HEAD ================== -->
 <section>
   <header id="top" class="container header">
     <div class="logo">OPTIKOL<span class="dot">.</span></div>
@@ -58,7 +58,7 @@
 
 
   
-  <section class="video-section">
+  <section class="video-section"> <!-- ================== VIDEO ================== -->
     <div class="container">
       <h2>Zobacz niektore z naszych realizacji</h2>
 
@@ -83,7 +83,7 @@
     </div>
   </section>
 
-  <section id="Ofirmie" class="testimonials">
+  <section id="Ofirmie" class="testimonials"> <!-- ================== REFERENCJE ================== -->
     <div class="container">
       <h2>Nie musisz wierzyć nam na słowo. Zobacz opinie o nas.</h2>
       <div class="testimonial-cards">
@@ -97,7 +97,7 @@
     </div>
   </section>
 
-  <section id="Oferta" class="pricing container">
+  <section id="Oferta" class="pricing container"> <!-- ================== OFERTA ================== -->
     <h2>Oferta</h2>
     <p>
       Wykonujemy powierzony kontrakt na maszynach Ditch Witch stosując oryginalne części i z wykorzystaniem oryginalnych materiałów eksploatacyjnych, certyfikowanych dla środowiska naturalnego. 
@@ -157,7 +157,7 @@
     </div>
   </section>
 
-  <section id="FAQ" class="faq container">
+  <section id="FAQ" class="faq container"> <!-- ================== FAQ ================== -->
     <h2>Najczęstsze pytania</h2>
     <details>
       <summary>Jaka jest minimalna długość zamawianego przewiertu?</summary>
